--- a/index.html
+++ b/index.html
@@ -213,13 +213,13 @@
         <div class="row pt-3 text-center cards">
           <!-- Phone & Tablet -->
           <div class="col-md-6">
-            <a class="d-block mx-auto mb-2" href="https://console.virtualpaper.com/luxe/luxe-fall-2019/">
+            <a class="d-block mx-auto mb-2" href="https://console.virtualpaper.com/luxe/luxe-fall-2019/" target="_blank">
                 <img class="img-fluid project" src="img/projects/luxe/luxe-spread.png" alt="">
               </a>
             <p class="text-center pb-3 text-uppercase text-white">Luxe Magazine Ottawa<br>Fall 2019</p>
           </div>
           <div class="col-md-6">
-            <a class="d-block mx-auto mb-2" href="https://console.virtualpaper.com/luxe/luxe-spring-summer-2019/">
+            <a class="d-block mx-auto mb-2" href="https://console.virtualpaper.com/luxe/luxe-spring-summer-2019/" target="_blank">
                 <img class="img-fluid project cover-open" src="img/projects/luxe/luxe-spread-2.png" alt="">
               </a>
             <p class="text-center pb-3 text-uppercase text-white">Luxe Magazine Ottawa<br>Spring/Summer 2019</p>
