--- a/photography.html
+++ b/photography.html
@@ -77,7 +77,7 @@
   <section class="mx-auto">
 
 
-<rssapp-wall id="qZOSoz5YhRNlAouM"></rssapp-wall><script src="https://widget.rss.app/v1/wall.js" type="text/javascript" async></script>
+<rssapp-wall id="jbWofz1mlttEDPhx"></rssapp-wall><script src="https://widget.rss.app/v1/wall.js" type="text/javascript" async></script>
 
 <div style="background-color: rf5f5f7;" class="text-center pt-5 pb-5">
   <a class="link" href="https://www.instagram.com/han.the.human/?hl=en" target="blank">See all posts.</a>
